<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFE8FA"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="552dp"
        android:layout_marginStart="2dp"
        android:layerType="none"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_text_dark_normal_background"
            android:backgroundTint="@android:color/holo_blue_light"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/singin"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/textView2"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:layout_weight="1"
            android:hint="@string/enter_user_name"
            android:padding="5sp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:layout_weight="1"
            android:hint="@string/enter_password"
            android:padding="5sp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_light"
            android:fontFamily="serif"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginBottom="60sp"
            android:layout_weight="1"
            android:backgroundTint="#BFE8FA"
            android:layerType="software"
            android:layoutDirection="locale"
            android:text="@string/forget_password"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>